# practice

./: README.md
Eigen/: Eigen_tensor_test.cpp  Eigen_test.cpp
Linux/: update_yum.sh
SWIG/go/: build.sh  readme.txt  runme.go  sayHi.cpp  sayHi.h
SWIG/python/: build.sh  readme.txt  sayHi.i
arm neon/: ReadMe.txt  neon_sigmoid_softmax.cc
bash/: run.sh
cpp/CMake/: CMakeLists.txt
cpp/Expression_Template_CRTP/: AUTHORS  CMakeLists.txt  ChangeLog  README.md
cpp/Expression_Template_CRTP/doc/: README.md
cpp/Expression_Template_CRTP/expression_guide/: exp_template.cpp  naive_overloading.cpp
cpp/Expression_Template_CRTP/include/: expression.hpp  op.hpp  valueType.hpp
cpp/Expression_Template_CRTP/rvo/: Makefile  NRVO_test.cpp  ReadMe.md
cpp/Expression_Template_CRTP/test/: test_crtp.cpp
cpp/Heterogeneity_List/: Heter_in_cpp.cpp  Heter_only_in_C.cpp  readMe.md
cpp/cpp inheritance/: cpp11_inher.cpp
cpp/cpp template/: template_inherit_with_traits.cpp
cpp/cpp traits/: cpp_traits_more.cpp  traits_test.cpp
cpp/cpu cores/: GetCpuNums.hpp  get_cpu_nums.cpp
cpp/data_process/: List_dir.cpp  cmp_gram_res.py  generateFourFive  generateFourFive.cpp  gram_4.txt  list_dir  makefile  merge_weekly_data.sh  old_generateFourFive.cpp  out.txt  readme.md  split_weekly_data.sh  unigram.txt  want.txt
cpp/data_process/cppUtils/: BlockingQueue.hpp  BoundedQueue.hpp  Condition.hpp  MutexLock.hpp  NonCopyable.hpp  StdExtension.hpp  StringUtil.hpp  Thread.hpp  ThreadPool.hpp
cpp/data_process/input/: 431.txt  462.txt  464.txt  485.txt
cpp/data_process/output/: 462.out  464.out
cpp/enable_shared_from_this/: enable_shared_from_this_test.cpp
cpp/encoding/: gbk.txt  t_encoding.hpp
cpp/list dir/: ListDir.hpp  list_dir.cpp
cpp/read gz data/: gz_read_line_test.cpp  gz_test.cpp
cpp/traits_test/: Makefile  traits_test.cpp
cython/: build.sh  cython_evaluate.pyx  python_evaluate.py  readme.md  setup.py  time_cmp.py
go/basic/: channel_select_with_timeout.go  close_channel_func.go  deferTest.go  error_process.go  factory_func.go  fetch_a_channel.go  flagTest.go  function_return.go  global_scope.go  go_severSimple.go  go_severSimple_echo_html.go  osAndSyscall.go  read_file_by_file.go  read_file_by_line.go  timeTest.go
go/fasthttp_test/: build.sh  httpTest.go  readme.txt
network/: curl 性能.txt  curlepoll.c
network/curlTest/: curl_util.cpp  curl_util.h  curl_util_unittest.cpp  main  main.cpp
php/: index.php  process_twinmodel.sh  readme.txt  search.sh
php/20171011/: bi.txt  uni.txt
pig/merge data/: aa.txt  bb.txt  merge_bigram.pig  pig_merge_test.sh
protobuf/: python_client_test1.py  qq.proto
python/just test/: default_dict_test.py
python/matplotlib test/bar_graph/: phrase_barsh.py
python/matplotlib test/pcolor/: pcolor_test.py
python/pyime/: README.md
python/spider/: spider_test.py
python/web server post/: client_post.py  my_server.py
servertest_python/: README.md  au.txt  get_load_test.py  press.sh  urls
shell/: awk_length.sh  b.txt  back_run.sh  declare.sh  default.sh  for.sh  list_floder_size.sh  make_expand_corpus.sh  nonunset_test.sh  replace_and_arr.sh  seq.sh  string#%Test.sh  while_getopts.sh
shell/shell locale/: corpus.utf8.txt  lang_test.sh  reade.md
shell/shell rm backup/: myrm.sh  readme.md  rmtrash.sh
